target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'EndDo'", "';'", "':'", "'.'", "','", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'+'", "<INVALID>", "'-'", 
                     "<INVALID>", "'*'", "<INVALID>", "'\\'", "<INVALID>", 
                     "'%'", "'='", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'=/='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'0'", "<INVALID>", "<INVALID>", "<INVALID>", "'True'", 
                     "'False'" ]

    symbolicNames = [ "<INVALID>", "ID", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "ENDDO", "SEMI", "COLON", "DOT", "COMMA", 
                      "LP", "RP", "LSB", "RSB", "LB", "RB", "ADD_INT", "ADD_FLOAT", 
                      "SUB_INT", "SUB_FLOAT", "MUL_INT", "MUL_FLOAT", "DIV_INT", 
                      "DIV_FLOAT", "MOD", "ASSIGN", "NOT", "AND", "OR", 
                      "EQUAL", "NOTEQUAL_INT", "LT_INT", "GT_INT", "LTE_INT", 
                      "GTE_INT", "NOTEQUAL_FLOAT", "LT_FLOAT", "GT_FLOAT", 
                      "LTE_FLOAT", "GTE_FLOAT", "INT_LIT", "ZERO_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "BOOL_LIT", "TRUE", "FALSE", "COMMENT", 
                      "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_declaration_part = 1
    RULE_single_var_list = 2
    RULE_array_list = 3
    RULE_array_lit = 4
    RULE_func_declaration_part = 5
    RULE_param_list = 6
    RULE_param_element = 7
    RULE_func_body = 8
    RULE_statement_in_function = 9
    RULE_if_statement_in_function = 10
    RULE_for_statement_in_function = 11
    RULE_while_statement_in_function = 12
    RULE_do_while_statement_in_function = 13
    RULE_var_decl_and_statement = 14
    RULE_assignment = 15
    RULE_break_statement = 16
    RULE_continue_statement = 17
    RULE_return_statement = 18
    RULE_function_call_statement = 19
    RULE_function_call = 20
    RULE_argument_list = 21
    RULE_element_expression = 22
    RULE_index_operators = 23
    RULE_exp = 24
    RULE_exp1 = 25
    RULE_exp2 = 26
    RULE_exp3 = 27
    RULE_exp4 = 28
    RULE_exp5 = 29
    RULE_operand = 30

    ruleNames =  [ "program", "var_declaration_part", "single_var_list", 
                   "array_list", "array_lit", "func_declaration_part", "param_list", 
                   "param_element", "func_body", "statement_in_function", 
                   "if_statement_in_function", "for_statement_in_function", 
                   "while_statement_in_function", "do_while_statement_in_function", 
                   "var_decl_and_statement", "assignment", "break_statement", 
                   "continue_statement", "return_statement", "function_call_statement", 
                   "function_call", "argument_list", "element_expression", 
                   "index_operators", "exp", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "operand" ]

    EOF = Token.EOF
    ID=1
    BODY=2
    BREAK=3
    CONTINUE=4
    DO=5
    ELSE=6
    ELSEIF=7
    ENDBODY=8
    ENDIF=9
    ENDFOR=10
    ENDWHILE=11
    FOR=12
    FUNCTION=13
    IF=14
    PARAMETER=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    ENDDO=20
    SEMI=21
    COLON=22
    DOT=23
    COMMA=24
    LP=25
    RP=26
    LSB=27
    RSB=28
    LB=29
    RB=30
    ADD_INT=31
    ADD_FLOAT=32
    SUB_INT=33
    SUB_FLOAT=34
    MUL_INT=35
    MUL_FLOAT=36
    DIV_INT=37
    DIV_FLOAT=38
    MOD=39
    ASSIGN=40
    NOT=41
    AND=42
    OR=43
    EQUAL=44
    NOTEQUAL_INT=45
    LT_INT=46
    GT_INT=47
    LTE_INT=48
    GTE_INT=49
    NOTEQUAL_FLOAT=50
    LT_FLOAT=51
    GT_FLOAT=52
    LTE_FLOAT=53
    GTE_FLOAT=54
    INT_LIT=55
    ZERO_LIT=56
    FLOAT_LIT=57
    STRING_LIT=58
    BOOL_LIT=59
    TRUE=60
    FALSE=61
    COMMENT=62
    WS=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65
    UNTERMINATED_COMMENT=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declaration_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declaration_partContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declaration_partContext,i)


        def func_declaration_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declaration_partContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declaration_partContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 62
                self.var_declaration_part()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 68
                self.func_declaration_part()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def single_var_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Single_var_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Single_var_listContext,i)


        def array_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_listContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declaration_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaration_part" ):
                return visitor.visitVar_declaration_part(self)
            else:
                return visitor.visitChildren(self)




    def var_declaration_part(self):

        localctx = BKITParser.Var_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(BKITParser.VAR)
            self.state = 77
            self.match(BKITParser.COLON)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 78
                self.single_var_list()
                pass

            elif la_ == 2:
                self.state = 79
                self.array_list()
                pass


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 82
                self.match(BKITParser.COMMA)
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 83
                    self.single_var_list()
                    pass

                elif la_ == 2:
                    self.state = 84
                    self.array_list()
                    pass


                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def BOOL_LIT(self):
            return self.getToken(BKITParser.BOOL_LIT, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_single_var_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_var_list" ):
                return visitor.visitSingle_var_list(self)
            else:
                return visitor.visitChildren(self)




    def single_var_list(self):

        localctx = BKITParser.Single_var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_single_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(BKITParser.ID)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 95
                self.match(BKITParser.ASSIGN)
                self.state = 101
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.INT_LIT]:
                    self.state = 96
                    self.match(BKITParser.INT_LIT)
                    pass
                elif token in [BKITParser.FLOAT_LIT]:
                    self.state = 97
                    self.match(BKITParser.FLOAT_LIT)
                    pass
                elif token in [BKITParser.STRING_LIT]:
                    self.state = 98
                    self.match(BKITParser.STRING_LIT)
                    pass
                elif token in [BKITParser.BOOL_LIT]:
                    self.state = 99
                    self.match(BKITParser.BOOL_LIT)
                    pass
                elif token in [BKITParser.LB]:
                    self.state = 100
                    self.array_lit()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def BOOL_LIT(self):
            return self.getToken(BKITParser.BOOL_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_array_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_list" ):
                return visitor.visitArray_list(self)
            else:
                return visitor.visitChildren(self)




    def array_list(self):

        localctx = BKITParser.Array_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(BKITParser.ID)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.match(BKITParser.LSB)
                self.state = 107
                self.match(BKITParser.INT_LIT)
                self.state = 108
                self.match(BKITParser.RSB)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LSB):
                    break

            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 113
                self.match(BKITParser.ASSIGN)
                self.state = 119
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.LB]:
                    self.state = 114
                    self.array_lit()
                    pass
                elif token in [BKITParser.FLOAT_LIT]:
                    self.state = 115
                    self.match(BKITParser.FLOAT_LIT)
                    pass
                elif token in [BKITParser.INT_LIT]:
                    self.state = 116
                    self.match(BKITParser.INT_LIT)
                    pass
                elif token in [BKITParser.BOOL_LIT]:
                    self.state = 117
                    self.match(BKITParser.BOOL_LIT)
                    pass
                elif token in [BKITParser.STRING_LIT]:
                    self.state = 118
                    self.match(BKITParser.STRING_LIT)
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_litContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def FLOAT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.FLOAT_LIT)
            else:
                return self.getToken(BKITParser.FLOAT_LIT, i)

        def STRING_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.STRING_LIT)
            else:
                return self.getToken(BKITParser.STRING_LIT, i)

        def BOOL_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.BOOL_LIT)
            else:
                return self.getToken(BKITParser.BOOL_LIT, i)

        def array_lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_litContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_litContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_lit" ):
                return visitor.visitArray_lit(self)
            else:
                return visitor.visitChildren(self)




    def array_lit(self):

        localctx = BKITParser.Array_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BKITParser.LB)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INT_LIT]:
                self.state = 124
                self.match(BKITParser.INT_LIT)
                pass
            elif token in [BKITParser.FLOAT_LIT]:
                self.state = 125
                self.match(BKITParser.FLOAT_LIT)
                pass
            elif token in [BKITParser.STRING_LIT]:
                self.state = 126
                self.match(BKITParser.STRING_LIT)
                pass
            elif token in [BKITParser.BOOL_LIT]:
                self.state = 127
                self.match(BKITParser.BOOL_LIT)
                pass
            elif token in [BKITParser.LB]:
                self.state = 128
                self.array_lit()
                pass
            elif token in [BKITParser.COMMA, BKITParser.RB]:
                pass
            else:
                pass
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 131
                self.match(BKITParser.COMMA)
                self.state = 137
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.INT_LIT]:
                    self.state = 132
                    self.match(BKITParser.INT_LIT)
                    pass
                elif token in [BKITParser.BOOL_LIT]:
                    self.state = 133
                    self.match(BKITParser.BOOL_LIT)
                    pass
                elif token in [BKITParser.STRING_LIT]:
                    self.state = 134
                    self.match(BKITParser.STRING_LIT)
                    pass
                elif token in [BKITParser.FLOAT_LIT]:
                    self.state = 135
                    self.match(BKITParser.FLOAT_LIT)
                    pass
                elif token in [BKITParser.LB]:
                    self.state = 136
                    self.array_lit()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def func_body(self):
            return self.getTypedRuleContext(BKITParser.Func_bodyContext,0)


        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declaration_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declaration_part" ):
                return visitor.visitFunc_declaration_part(self)
            else:
                return visitor.visitChildren(self)




    def func_declaration_part(self):

        localctx = BKITParser.Func_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BKITParser.FUNCTION)
            self.state = 147
            self.match(BKITParser.COLON)
            self.state = 148
            self.match(BKITParser.ID)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 149
                self.param_list()


            self.state = 152
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Param_elementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Param_elementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):
